Added ScrollUp button with some fixed bug in other components

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -47,6 +47,11 @@
     color: var(--title-color-dark);
 }
 
+/* ============  Change Background Header ============ */
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.2);
+}
+
 /* ============ BREAKPOINTS ============= */
 /* for medium devices */
 @media screen and (max-width: 768px) {
@@ -108,9 +113,4 @@
     .nav__toggle {
         display: block;
     }
-}
-
-/* for small devices  */
-@media screen and (max-width: 350px){
-
 }
