--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,117 +1,140 @@
-.work__filters{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 0.75rem;
-    margin-bottom: var(--mb-2);
+.work__filters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 0.75rem;
+  margin-bottom: var(--mb-2);
 }
 
-.work__item{
-    color: var(--title-color);
-    padding: 0.25rem 0.75rem;
-    /* background-color: black; */
-    font-weight: var(--font-medium);
-    border-radius: 0.5rem;
-    text-transform: capitalize;
-    cursor: pointer;
+.work__item {
+  color: var(--title-color);
+  padding: 0.25rem 0.75rem;
+  /* background-color: black; */
+  font-weight: var(--font-medium);
+  border-radius: 0.5rem;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
-.work__item:hover{
-    background-color: var(--title-color);
-    color: var(--container-color);
+.work__item:hover {
+  background-color: var(--title-color);
+  color: var(--container-color);
 }
 
-.acitve-work{
-    background-color: var(--title-color);
-    color: var(--container-color);
+.acitve-work {
+  background-color: var(--title-color);
+  color: var(--container-color);
 }
 
-.work__container{
-    grid-template-columns: repeat(2, max-content);
-    gap: 3rem;
-    justify-content: center;
+.work__container {
+  grid-template-columns: repeat(2, max-content);
+  gap: 3rem;
+  justify-content: center;
 }
 
-.work__card{
-    background-color: var(--container-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 1.25rem;
-    border-radius: 1rem;
+.work__card {
+  background-color: var(--card-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
+  border-radius: 1rem;
 }
 
-.work__img{
-    width: 295px;
-    border-radius: 1rem;
-    margin-bottom: var(--mb-1);
+.work__img {
+  width: 295px;
+  border: 0.5px solid var(--text-color);
+  border-radius: 1rem;
+  margin-bottom: var(--mb-1);
 }
 
-.work__title{
-    font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: var(--mb-0-5);
+.work__title {
+  color: black;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
 }
 
-.work__button{
-    color: var(--text-color);
-    font-size: var(--small-font-size);
-    display: flex;
-    align-items: center;
-    column-gap: 0.25rem;
+.work__desc{
+  font-size: var(--small-font-size);
+  color: black;
+  margin-bottom: var(--mb-0-5);
 }
 
-.work__button-icon{
-    font-size: 1rem;
-    transition: 0.4s;
+.work__button-group{
+  display: flex;
+  gap: 0.75rem;
 }
 
-.work__button:hover .work__button-icon{
-    transform: translateX(0.25rem);
+.work__button {
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  display: flex;
+  align-items: center;
+  padding: 0.12rem 0.18rem;
+  column-gap: 0.25rem;
+  border: 0.5px solid gray;
+  border-radius: 1.2rem;
+  background-color: var(--container-color);
+  cursor: pointer;
+}
+
+.work__button:hover{
+  background-color: rgb(165, 164, 164);
+  color: rgb(255, 255, 255);
+  box-shadow: 1px 0px 10px 1px white;
+}
+
+.work__button-icon {
+  font-size: 1rem;
+  transition: 0.4s;
+}
+
+.work__button:hover .work__button-icon {
+  transform: translateX(0.25rem);
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-  .work__container{
+  .work__container {
     gap: 1.25rem;
   }
 
-  .work__card{
+  .work__card {
     padding: 1rem;
   }
 
-  .work__img{
+  .work__img {
     margin-bottom: 0.75rem;
   }
 
-  .work__title{
+  .work__title {
     margin-bottom: 0.25rem;
   }
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-  .work__container{
+  .work__container {
     grid-template-columns: max-content;
   }
 }
 
 @media screen and (max-width: 576px) {
-    .work__container{
-        grid-template-columns: 1fr;
-    }
+  .work__container {
+    grid-template-columns: 1fr;
+  }
 
-    .work__img{
-        width: 100%;
-    }
+  .work__img {
+    width: 100%;
+  }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-  .work__item{
+  .work__item {
     font-size: var(--small-font-size);
   }
 
-  .work__filters{
+  .work__filters {
     column-gap: 0.25rem;
   }
 }
