--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -17,8 +17,12 @@
 }
 
 .about__box{
-    background-color: var(--container-color);
-    border: 1px solid rgba(0,0,0,0.1);
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+    /* background-color: var(--container-color); */
+    border: 1px solid rgba(255, 255, 255,0.1);
     border-radius: 0.75rem;
     text-align: center;
     padding: 1rem 1.25rem;
@@ -26,13 +30,14 @@
 
 .about__icon{
     font-size: 1.5rem;
-    color: var(--title-color);
+    color: white;
     margin-bottom: var(--mb-0-5);
 }
 
 .about__title{
     font-size: var(--small-font-size);
     font-weight: var(--font-medium);
+    color: white;
 }
 
 .about__subtitle{
