--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,64 +1,76 @@
-.footer{
-    background-color: var(--container-color);
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+.footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+  /* background-color: var(--container-color); */
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 0.75rem;
 }
 
-.footer__container{
-    padding: 2rem 0 4rem;
-}
-
-.footer__title,
-.footer__link{
-    color: var(--title-color);
+.footer__container {
+  padding: 2rem 0 4rem;
 }
 
 .footer__title{
-    text-align: center;
-    margin-bottom: var(--mb-2);
+    color: rebeccapurple;
+}
+.footer__link {
+  color: white;
 }
 
-.footer__link:hover{
-    color: var(--title-color-dark);
+.footer__title {
+  text-align: center;
+  margin-bottom: var(--mb-2);
+  /* color: red; */
 }
 
-.footer__list{
-    display: flex;
-    justify-content: center;
-    column-gap: 1.5rem;
-    margin-bottom: var(--mb-2);
+.footer__link:hover {
+  color: white;
 }
 
-.footer__social{
-    display: flex;
-    justify-content: center;
-    column-gap: 1.25rem;
+.footer__list {
+  display: flex;
+  justify-content: center;
+  column-gap: 1.5rem;
+  margin-bottom: var(--mb-2);
 }
 
-.footer__social-link{
-    background-color: var(--title-color);
-    color: var(--container-color);
-    font-size: 1.125rem;
-    padding: 0.4rem;
-    border-radius: 0.5rem;
-    display: inline-flex;
+.footer__social {
+  display: flex;
+  justify-content: center;
+  column-gap: 1.25rem;
 }
 
-.footer__social-link:hover{
-    background-color: var(--title-color-dark);
+.footer__social-link {
+  background-color: var(--title-color);
+  color: var(--container-color);
+  font-size: 1.125rem;
+  padding: 0.4rem;
+  border-radius: 0.5rem;
+  display: inline-flex;
+  transition: background-color 1ms ease, box-shadow 10ms ease;
 }
 
-.footer__copy{
-    display: block;
-    margin-top: 2.5rem;
-    color: var(--title-color);
-    text-align: center;
-    font-size: var(--smaller-font-size);
+.footer__social-link:hover {
+  background-color: white;
+  color: rebeccapurple;
+  scale: 140%;
+}
+
+.footer__copy {
+  display: block;
+  margin-top: 2.5rem;
+  color: var(--title-color);
+  text-align: center;
+  font-size: var(--smaller-font-size);
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-  .footer__social-link{
+  .footer__social-link {
     padding: 0.25rem;
     border-radius: 0.25rem;
     font-size: 1rem;
@@ -67,7 +79,6 @@
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-  
 }
 
 @media screen and (max-width: 576px) {
@@ -75,6 +86,4 @@
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-  
 }
-
