--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,32 +1,40 @@
+
 .home__container{
     row-gap: 7rem;
 }
+.home__data{
+    /* width: 120%; */
+}
 
 .home__content{
-    grid-template-columns: 116px repeat(2,1fr);
+    grid-template-columns: 50px 550px 200px;
     padding-top: 5.5rem;
-    column-gap: 2rem;
+    column-gap: 4rem;
     align-items: center;
 }
 
 .home__social{
     display: grid;
     grid-template-columns: max-content;
-    row-gap: 1rem;
+    row-gap: 2rem;
 }
 
 .home__social-icon{
-    font-size: 1.25rem;
-    color: var(--title-color);
+    font-size: 1.7rem;
+    color:gray;
+    transition: color,scale 0.3s ease;
 }
 
 .home__social-icon:hover{
-    color: var(--title-color-dark);
+    color:white;
+    scale: 150%;
 }
 
 .home__title{
     font-size: var(--h1-font-size);
     margin-bottom: var(--mb-0-25);
+    width: 100%;
+    color: rebeccapurple;
 }
 
 .home__hand{
@@ -38,29 +46,39 @@
 .home__subtitle{
     position: relative;
     font-size: var(--h3-font-size);
-    padding-left: 5.4rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
+    text-align: center;
+    color: rgb(126, 107, 145);
 }
 
 .home__subtitle::before{
     content: '';
     position: absolute;
-    width: 70px;
+    width: 160px;
     height: 1px;
     background-color: var(--text-color);
     left: 0;
     top: 1rem;
 }
+.home__subtitle::after{
+    content: '';
+    position: absolute;
+    width: 160px;
+    height: 1px;
+    background-color: var(--text-color);
+    right:0;
+    top: 1rem;
+}
 
 .home__description{
-    max-width: 400px;
+    max-width: 100%;
     margin-bottom: var(--mb-3);
     text-align: justify;
 }
 
 .home__img{
-    background: url(../../assets//profile.jpg);
+    background: url(../../assets//profile_2.2.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -70,6 +88,9 @@
     width: 300px;
     height: 300px;
     animation: profile__animate 8s ease-in-out infinite 1s;
+}
+.home__scroll-arrow{
+    color: white;
 }
 
 @keyframes profile__animate {
@@ -102,7 +123,7 @@
 }
 
 .home__scroll-name{
-    color: var(--title-color);
+    color: white;
     font-weight: var(--font-medium);
     margin-right: var(--mb-0-25);
     margin-left: 2px;
@@ -141,6 +162,7 @@
   }
 }
 
+
 /* For medium devices */
 @media screen and (max-width: 768px) {
     .home__content{
@@ -153,6 +175,7 @@
     }
     .home__data{
         grid-column: 1/3;
+      
     }
     .home__img{
         box-shadow: inset 0 0 0 6px rgb(225 225 225/30%);
