--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -17,7 +17,7 @@
 }
 
 .qualification__button:hover{
-    color: var(--title-color-dark);
+    color: white;
 }
 
 .qualification__icon{
@@ -26,7 +26,7 @@
 }
 
 .qualification__active{
-    color: var(--title-color-dark);
+    color: white;
 }
 
 .qualification__sections{
@@ -52,6 +52,7 @@
 .qualification__title{
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
+    color: white;
 }
 
 .qualification__subtitle{
