--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -6,8 +6,16 @@
 
 .services__content{
     position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--container-color);
+    /* border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--container-color); */
+     background-color: rgba(255, 255, 255, 0.05);
+  /* backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px); */
+
+  /* background-color: var(--container-color); */
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 0.75rem;
+
     padding: 6rem 0 2rem 2.5rem;
 }
 
@@ -16,16 +24,18 @@
     font-size: 2rem;
     color: var(--title-color);
     margin-bottom: var(--mb-1);
+    color: rebeccapurple;
 }
 
 .services__title{
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-1);
     font-weight: var(--font-medium);
+    color: white;
 }
 
 .services__button{
-    color: var(--title-color);
+    color: rgba(151, 151, 151, 0.647);
     font-size: var(--small-font-size);
     display: inline-flex;
     align-items: center;
