--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -14,15 +14,17 @@
   border-radius: 0.5rem;
   text-transform: capitalize;
   cursor: pointer;
+  color: rebeccapurple;
 }
 
 .work__item:hover {
   background-color: var(--title-color);
-  color: var(--container-color);
+  /* color: var(--container-color); */
+
 }
 
 .acitve-work {
-  background-color: var(--title-color);
+  background-color:rebeccapurple;
   color: var(--container-color);
 }
 
@@ -33,10 +35,15 @@
 }
 
 .work__card {
-  background-color: var(--card-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+  /* background-color: var(--container-color); */
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 0.75rem;
   padding: 1.25rem;
-  border-radius: 1rem;
+
 }
 
 .work__img {
@@ -47,14 +54,14 @@
 }
 
 .work__title {
-  color: black;
+  color: white;
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
 
 .work__desc{
   font-size: var(--small-font-size);
-  color: black;
+  color: rgba(218, 218, 218, 0.66);
   margin-bottom: var(--mb-0-5);
 }
 
@@ -64,22 +71,26 @@
 }
 
 .work__button {
-  color: var(--text-color);
+  padding: 20px;
+  color: white;
+  width: 90px;
+  height: 30px;
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  padding: 0.12rem 0.18rem;
+  justify-content: center;
+  /* padding: 0.12rem 0.18rem; */
   column-gap: 0.25rem;
-  border: 0.5px solid gray;
+  border: 1px solid rebeccapurple;
   border-radius: 1.2rem;
-  background-color: var(--container-color);
+  /* background-color:rebeccapurple; */
   cursor: pointer;
 }
 
 .work__button:hover{
-  background-color: rgb(165, 164, 164);
-  color: rgb(255, 255, 255);
-  box-shadow: 1px 0px 10px 1px white;
+  background-color:white;
+  color:rebeccapurple;
+  /* box-shadow: 1px 0px 10px 1px white; */
 }
 
 .work__button-icon {
