--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*{
+  /* border: 1px solid black; */
+}
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
