--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -106,7 +106,7 @@
 }
 
 .home__scroll{
-    margin-left: 9.25rem;
+    /* margin-left: 9.25rem; */
 }
 
 .wheel{
@@ -196,6 +196,13 @@
   .home__hand{
     width: 22px;
     height: 22px;
+  }
+  .home__title{
+    /* color: red; */
+    width: 100%;
+    font-size: 1.2rem ;
+    /* border: 1px solid white; */
+    text-align: center;
   }
 }
 
